2011-05-15  Thomas Adam <thomas@fvwm.org>
	* download/index.php:
	Deprecate 2.4.X officially now that 2.6.X has been out long enough for
	most packagers to migrate.   Also, mention rather loudly for those
	people on OpenBSD, that the version of FVWM which ships with it, is not
	supported at all.  No matter how hard they might try and argue
	otherwise.

2011-05-15  Thomas Adam <thomas@fvwm.org>
	* download/index.php:
	Remove any mention of RPM/DEB packages.  They've not been updated  in
	ages, and doing so is pointless given downstream's packaging techniques.

2011-05-09  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Susanne_Schmidt-fvwmbrown-1000x750:
	* screenshots/desktops/Susanne_Schmidt-shotgreen-900x889:
	Clarified description; "patched FVWM" needed.

2011-05-05  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Susanne_Schmidt-fvwmbrown-1000x750:
	* screenshots/desktops/Susanne_Schmidt-shotgreen-900x889:
	Added screenshots from Susanne.

2011-04-17  Thomas Adam <thomas@fvwm.org>
	* download/index.php:
	Remove reference to bug tracker.

2011-04-16  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/stable:
	* index.php:
	* definitions.inc:
	Regenerate files for 2.6.1

2011-04-15  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/stable:
	Regenerate against a stable source tree, and not unstable.

	This corrects any version numbers on the generated files.

2011-04-15  Thomas Ada, <thomas@fvwm.org>
	* screenshots/desktops/screenshot_db.inc:
	* screenshots/desktops/Christine-blackandgrey-1600x1200:
	* screenshots/desktops/Christine-fukation-1400x1050:
	* screenshots/desktops/Christine-glassy-1024x768:
	* screenshots/desktops/Christine-international-1400x1050:
	* screenshots/desktops/Christine-toogrey-1024x768:
	* screenshots/desktops/Christine-untitled-1600x1200:
	Added screenshots from Christine.

2011-04-15  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/manpages2php:
	* documentation/manpages/stable: