@@ -1,3 +1,11 @@
+2011-06-04  Thomas Adam <thomas@fvwm.org>
+	* index.php:
+	* download/index.php:
+	* definitions.inc:
+	Remove references to an unstable FVWM version
+
+	This concept no longer exists in FVWM.
+
 2011-05-15  Thomas Adam <thomas@fvwm.org>
 	* download/index.php:
 	Deprecate 2.4.X officially now that 2.6.X has been out long enough for
